--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "node-appwrite": "^17.0.0",
+    "nuqs": "^2.4.3",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
     "react-icons": "^5.5.0",
+    "react-use": "^17.6.0",
     "recharts": "^3.0.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.5",
