--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-appwrite": "^17.0.0",
     "nuqs": "^2.4.3",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.19.4",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
@@ -52,6 +53,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-big-calendar": "^1.16.2",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
